# AC-Turnover-Prediction

./: .coveragerc  .env_sample  .gitignore  .gitlab-ci.yml  LICENSE  README.md  alayacare.code-workspace  environment.yml  main.ipynb  main.py  pylintrc  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
src/analysis/: distribution_plot.py  generate_statistics.py
src/data/: process_dataframe.py
src/machine_learning/: inference_runner.py  sweep.py  trainer.py
src/mappings/: ARCHETYPE_mapping.json  EMPLOYEE_GENDER_mapping.json  EMPLOYEE_JOB_TITLE_mapping.json  EMPLOYEE_STATE_mapping.json  employee_status_mapping.json
src/utility/: dataframe_cache.py  dataframe_set_types.py  dotdict.py  environment.py  kmeans_helper.py  logger.py  mapping_loader.py  nlp.py  segmentation.py  tsne_helper.py
test/: test_anomaly_detector.py  test_categorize_text_field.py  test_compute_adl_completion_rate.py  test_compute_commute_distance.py  test_compute_first_visit_date.py  test_compute_static_employee_tenure.py  test_day_to_first_visit.py  test_did_overtime_calculated_field.py  test_employee_tenure.py  test_fill_gaps.py  test_fill_na.py  test_has_adl_completed.py  test_hourly_pay.py  test_remove_hours_mismatch.py  test_remove_nan.py  test_replace_invalid_computed_rate.py  test_shift_hours.py  test_sum_salary_per_visit.py  test_was_late_by.py  test_was_late_calculated_fields.py  test_work_hours_deviation_calculated_field.py  test_y_label.py
test/csv/: test_compute_first_visit_date_expected.csv  test_compute_first_visit_date_input.csv  test_day_to_first_vist_expected.csv  (+13 more)
(+126 files in other folders)
