[tool.poetry]
name = "alayacare"
version = "0.1.0"
description = ""
authors = ["Nicolas Depelteau <nicolas@depelteau.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.12"
notebook = "^7.0.5"
nltk = "^3.8.1"
pylint = "^3.0.1"
python-dotenv = "^1.0.0"
matplotlib = "^3.8.0"
lightning = "^2.1.0"
gensim = "^4.3.2"
jupyter = "^1.0.0"
ipywidgets = "^8.1.1"
onnx = "^1.14.1"
wandb = "^0.16.0"
seaborn = "^0.13.0"
adjusttext = "^0.8"
pillow = "^10.1.0"
onnxruntime = "^1.16.1"
lightgbm = "^4.1.0"
raiwidgets = "^0.30.0"
interpret-community = "^0.30.0"
plotly = "^5.17.0"
adtk = "^0.6.2"
imblearn = "^0.0"
colored = "^2.2.3"
kaleido = "0.2.1"
einops = "^0.7.0"
patool = "^1.15.0"
reformer-pytorch = "^1.4.4"
scipy = "^1.11.3"
sktime = "^0.24.0"
sympy = "^1.12"
pip = "^23.3.1"
dash = "^2.14.1"
dash-cytoscape = "^0.3.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.0.0"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
